Minor css adjustments

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Wade Pate" />
     <meta
       name="description"
-      content="Mockup purchase page for a bakery"
+      content="Mockup purchase page for a friends bakery"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
